@@ -66,6 +66,9 @@ Release 0.23.1 - Unreleased
 
   BUG FIXES
 
+    MAPREDUCE-3221. Reneabled the previously ignored test in TestSubmitJob
+    and fixed bugs in it. (Devaraj K via vinodkv)
+
 Release 0.23.0 - 2011-11-01 
 
   INCOMPATIBLE CHANGES
